快速添加文章

--- a/blog/001.md
+++ b/blog/001.md
@@ -7,4 +7,38 @@ _2013-04-11 09:25:45_
 
 * * *
 
-content
+```
+#include<stdio.h>
+#include<string.h>
+int main()
+{
+	int count = 4123131;
+	char countBuff[1];
+	memset( countBuff, 0, 1 );
+	memcpy( countBuff, &count, sizeof(count) );
+
+	int recvCount;
+	memcpy( &recvCount, countBuff, sizeof(recvCount) );
+
+	printf("%d", recvCount);
+}
+```
+
+Another Version
+
+```
+#include<stdio.h>
+#include<string.h>
+int main()
+{
+	int count = 4123131;
+	char countBuff;
+	memset( &countBuff, 0, 1 );
+	memcpy( &countBuff, &count, sizeof(count) );
+
+	int recvCount;
+	memcpy( &recvCount, &countBuff, sizeof(recvCount) );
+
+	printf("%d", recvCount);
+}
+```
