--- a/blog/009.md
+++ b/blog/009.md
@@ -7,4 +7,84 @@ _2013-08-02 12:26:08_
 
 * * *
 
-content
+    这两天小用了一下MFC的CSocket类，写点心得：其实网上好多高人都说这个类其实封装的不怎么样，我对此不发表意见，对我而言能用，会用，就成，还没有到评判微软的水准。所以说就练习着用了一下，本机电脑装的VS2010，装有MSDN，总感觉内容很少，可能安装的时候我去掉了很多选项的原因，进入正题，MSDN中查CSocket类，嗯？怎么成员函数那么少，连发送接收信息的函数都没有。后来才发现，CSocket类继承CAsyncSocket类，需要什么样的函数直接去看CAsyncSocket类就行了。
+
+    在学习的过程中参考了这位博友的博文：http://blog.csdn.net/yejiansnake/article/details/2175778
+
+    他的服务端接收连接的代码类似这样，具体可以去看他的代码
+
+```
+	while(!m_exit)
+	{
+		if(!aSocket.Accept(serverSocket))
+		{
+			continue;
+		}
+		else
+		{
+			//...
+		}
+	}
+```
+
+    当时初学，就按着写了，写好之后总想修改一下，我能不能直接让CSocket::Accept()做为循环的判定条件呢（备注一下，不是说那位博友的代码有问题或是不好怎样，他用m_exit控制是否继续接收连接，只是我不需要，想修改一下）CSocket::Accept()如果想作为判定条件，就必须在接收到连接请求后才返回，没有接收到连接请求前不能返回，否则肯定会返回 0 循环结束。
+
+    那我来调试运行看看内部处理函数，来确定它是否具备：直接上代码
+
+```
+BOOL CSocket::Accept(CAsyncSocket& rConnectedSocket, SOCKADDR* lpSockAddr, int* lpSockAddrLen)
+{
+	if (m_pbBlocking != NULL)
+	{
+		WSASetLastError(WSAEINPROGRESS);
+		return FALSE;
+	}
+	while (!CAsyncSocket::Accept(rConnectedSocket, lpSockAddr, lpSockAddrLen))
+	{
+		if (GetLastError() == WSAEWOULDBLOCK)
+		{
+			if (!PumpMessages(FD_ACCEPT))
+				return FALSE;
+		}
+		else
+			return FALSE;
+	}
+	return TRUE;
+}
+```
+
+```
+BOOL CAsyncSocket::Accept(CAsyncSocket& rConnectedSocket,
+	SOCKADDR* lpSockAddr, int* lpSockAddrLen)
+{
+	ASSERT(rConnectedSocket.m_hSocket == INVALID_SOCKET);
+	ASSERT(CAsyncSocket::FromHandle(INVALID_SOCKET) == NULL);
+
+	CAsyncSocket::AttachHandle(INVALID_SOCKET, &rConnectedSocket);
+	if (CAsyncSocket::FromHandle(INVALID_SOCKET) == NULL)
+	{
+		// AttachHandle Call has failed
+		return FALSE;
+	}
+
+	SOCKET hTemp = accept(m_hSocket, lpSockAddr, lpSockAddrLen);	
+
+	if (hTemp == INVALID_SOCKET)
+	{
+		DWORD dwProblem = GetLastError();
+		CAsyncSocket::DetachHandle(rConnectedSocket.m_hSocket, FALSE);
+		rConnectedSocket.m_hSocket = INVALID_SOCKET;
+		SetLastError(dwProblem);
+	}
+	else if (CAsyncSocket::FromHandle(INVALID_SOCKET) != NULL)
+	{
+		rConnectedSocket.m_hSocket = hTemp;
+		CAsyncSocket::DetachHandle(INVALID_SOCKET, FALSE);
+		CAsyncSocket::AttachHandle(hTemp, &rConnectedSocket);
+	}
+
+	return (hTemp != INVALID_SOCKET);
+}
+```
+
+首先介绍API函数 accept() 函数的返回值，MSDN上大致是这样说的，如果成功则返回SOCKET类型的句柄，和客户端通讯就通过它。如果失败将返回 INVALID_SOCKET，由此看来，上面的那个 hTemp == INVALID_SOCKET，之后返回的是就是 FALSE。那么在CSocket::Accept()里面的 while就是一直循环知道接受到连接请求，这样是不是说明具备做判定了呢。
