--- a/blog/005.md
+++ b/blog/005.md
@@ -7,7 +7,7 @@ _2013-04-17 10:02:42_
 
 * * *
 
-这段时间公司做新的网站，一些小功能自然落到了我的头上，可是我只会编程呀，WEB前端设计，CSS样式只是知道一点点，但是我还是“连抄带偸”实现了功能，直接上代码。
+这段时间公司做新的网站，一些小功能自然落到了我的头上，可是我只会编程呀，WEB前端设计，CSS样式只是知道一点点，但是我还是“连抄带偷”实现了功能，直接上代码。
 
 ```
 <!doctype html>
