--- a/blog/006.md
+++ b/blog/006.md
@@ -64,4 +64,4 @@ void CMainFrame::DockControlBarLeftOf(CToolBar* bar, CToolBar* leftof)
 	DockControlBarLeftOf(&m_wndToolBarNav,&m_wndToolBar);//主要是这里
 ```
 
-以后三个步骤后，就可以去看效果啦
+三个步骤后，就可以去看效果啦
