--- a/blog/007.md
+++ b/blog/007.md
@@ -7,7 +7,7 @@ _2013-07-30 16:08:30_
 
 * * *
 
-    资源下载页面：http://download.csdn.net/detail/panshiqu/5839805
+    [资源下载](./download/PopFocus.rar)
 
     这段时间还是在新公司写小程序练手，我的水平是菜鸟中的菜鸟那种水平。
 
