--- a/blog/008.md
+++ b/blog/008.md
@@ -7,7 +7,7 @@ _2013-08-01 11:03:15_
 
 * * *
 
-    程序下载：http://download.csdn.net/detail/panshiqu/5850959
+    [程序下载](./download/Test.rar)
 
     近期编程想用CList维护一个对象，来方便的实现增，删，改，查，里面要放多个元素，想实现这种，就要自己写结构体，或是类。类的话就让他派生自CObject吧，然后接下来会遇到两个问题，我在这里整理一下我在网上寻求的解决方法，文中所写是否是问题的标准解决办法，有待高手指教，我只是发此文章帮助和我一样遇到问题的人，和记录一下自己的学习历程。
 
@@ -83,7 +83,7 @@ private:
 	void operator=(const CObject& objectSrc);       // no implementation
 ```
 
-    它竟然把 operator= 声明为 private，大家这个都应该有印象，声明为private的派生类是访问不到的，我们写的类继承自CObject这样的话，我们要用到它的时候是不是自己要自己给自己的类重写写一个 operator= 函数呢，当然了，定义成public。
+    它竟然把 operator= 声明为 private，大家这个都应该有印象，声明为private的派生类是访问不到的，我们写的类继承自CObject这样的话，我们要用到它的时候是不是自己要自己给自己的类重写一个 operator= 函数呢，当然了，定义成public。
 
 ```
 public:
@@ -96,7 +96,7 @@ public:
 
     不管里面的内容怎样，有这个函数就行了，不然没有的话，怎么办，就去父类中找，找到啦，好高兴，准备要用，编译器突然发现是private声明，只能报错了，其实再深究一下，我只是用CList定义一个对象，怎么会用到 operator = 呢，其实这个问题完全可以忽略，因为就算你现在不用，当你给这个对象填值的时候早晚要用到，非要较真，程序都通了，调试一下看看。
 
-    下面我重现我遇到的第二个错误，修改OnTimer()实现像样的功能
+    下面我重现我遇到的第二个错误，修改OnTimer()实现这样的功能
 
 ```
 void CTestDlg::OnTimer(UINT_PTR nIDEvent)
@@ -215,9 +215,9 @@ BOOL AFXAPI CompareElements(const TYPE* pElement1, const ARG_TYPE* pElement2)
 }
 ```
 
-    它返回的是一个 == 判断，等等！类型是什么？类型好像是我们自定义的CObjectInfo类，可是我们的类中没有重载 operator ==，调试至次结束，正确添加operator == 程序就不会报错
+    它返回的是一个 == 判断，等等！类型是什么？类型好像是我们自定义的CObjectInfo类，可是我们的类中没有重载 operator ==，调试至此结束，正确添加operator == 程序就不会报错
 
-    先在我门来说说 operator == 为什么要在后面加一个 const 来修饰呢？细心的朋友在上面的浏览中也发现了Find函数的实现中，后面也加了一个const来修饰，随后我就百度了一下，朋友这样总结说（取自：http://blog.csdn.net/zhangyulin54321/article/details/7877079）
+    现在我们来说说 operator == 为什么要在后面加一个 const 来修饰呢？细心的朋友在上面的浏览中也发现了Find函数的实现中，后面也加了一个const来修饰，随后我就百度了一下，朋友这样总结说（取自：http://blog.csdn.net/zhangyulin54321/article/details/7877079）
 
     首先像这样的声明void fun() const;必须是类的成员函数，不能是单独的类外部函数
 
