--- a/blog/008.md
+++ b/blog/008.md
@@ -83,7 +83,7 @@ private:
 	void operator=(const CObject& objectSrc);       // no implementation
 ```
 
-    它竟然把 operator= 声明为 private，大家这个都应该有印象，声明为private的派生类是访问不到的，我们写的类继承自CObject这样的话，我们要用到它的时候是不是自己要自己给自己的类重写一个 operator= 函数呢，当然了，定义成public。
+    它竟然把 operator= 声明为 private，大家这个都应该有印象，声明为private的派生类是访问不到的，我们写的类继承自CObject这样的话，我们要用到它的时候是不是自己要给自己的类重写一个 operator= 函数呢，当然了，定义成public。
 
 ```
 public:
@@ -94,7 +94,7 @@ public:
 	}
 ```
 
-    不管里面的内容怎样，有这个函数就行了，不然没有的话，怎么办，就去父类中找，找到啦，好高兴，准备要用，编译器突然发现是private声明，只能报错了，其实再深究一下，我只是用CList定义一个对象，怎么会用到 operator = 呢，其实这个问题完全可以忽略，因为就算你现在不用，当你给这个对象填值的时候早晚要用到，非要较真，程序都通了，调试一下看看。
+    不管里面的内容怎样，有这个函数就行了，不然没有的话，怎么办，就去父类中找，找到啦，好高兴，准备要用，编译器突然发现是private声明，只能报错了，其实再深究一下，我只是用CList定义一个对象，怎么会用到 operator = 呢，其实这个问题完全可以忽略，因为就算你现在不用，当你给这个对象填值的时候早晚要用到，不要较真，程序都通了，调试一下看看。
 
     下面我重现我遇到的第二个错误，修改OnTimer()实现这样的功能
 
@@ -224,9 +224,12 @@ BOOL AFXAPI CompareElements(const TYPE* pElement1, const ARG_TYPE* pElement2)
     其次，如果为类成员函数，他表示
 
 （1）不能修改成员变量；
+
 （2）不能调用非const函数；
+
 （3）其他const函数可以调用它；（其他非const函数当然也可以调用它）
-（4）只能从const对象（或引用用指针）上调用，比如：const   A   a;   a.f();
+
+（4）只能从const对象（或引用指针）上调用，比如：const   A   a;   a.f();
 
    我想应该和第二条有关系，呵呵。
 
