--- a/blog/009.md
+++ b/blog/009.md
@@ -87,4 +87,4 @@ BOOL CAsyncSocket::Accept(CAsyncSocket& rConnectedSocket,
 }
 ```
 
-首先介绍API函数 accept() 函数的返回值，MSDN上大致是这样说的，如果成功则返回SOCKET类型的句柄，和客户端通讯就通过它。如果失败将返回 INVALID_SOCKET，由此看来，上面的那个 hTemp == INVALID_SOCKET，之后返回的是就是 FALSE。那么在CSocket::Accept()里面的 while就是一直循环知道接受到连接请求，这样是不是说明具备做判定了呢。
+首先介绍API函数 accept() 函数的返回值，MSDN上大致是这样说的，如果成功则返回SOCKET类型的句柄，和客户端通讯就通过它。如果失败将返回 INVALID_SOCKET，由此看来，上面的那个 hTemp == INVALID_SOCKET，之后返回的就是 FALSE。那么在CSocket::Accept()里面的 while就是一直循环直到接受到连接请求，这样是不是说明具备做判定了呢。
