--- a/blog/011.md
+++ b/blog/011.md
@@ -7,7 +7,7 @@ _2013-08-29 12:31:05_
 
 * * *
 
-    源码下载：http://download.csdn.net/detail/panshiqu/6031859
+    [源码下载](./download/DlgToolbar.rar)
 
     最终效果图
 
@@ -108,8 +108,8 @@ _2013-08-29 12:31:05_
 
 这时会发现，工具栏的背景差异就出来了，这个时候冷静的想想，工具栏也是窗口（某位大哥说的话）也给他画个背景，这是要自己写类，继承CToolBar， 然后响应 OnEraseBkgnd 函数。 这个函数也照着上面的写，执行一下看效果，噫？？？，没有改变呀？博主骗人？别忘记把原来 m_wndToolBar 的类型重新定义为 你写的新类哦，这样再一看就可以了。
 
-尾语：在研究的过程中，我也考虑到了CReBar，一是多增加了一个东西感觉不好，二是截至到发这篇文章前，我始终没有发现怎么去掉那两条灰线，CReBar设置背景的话还是很方便的，网上有很多有关文章，大家不妨深入了解下
+尾语：在研究的过程中，我也考虑到了CReBar，一是多增加了一个东西感觉不好，二是截止到发这篇文章前，我始终没有发现怎么去掉那两条灰线，CReBar设置背景的话还是很方便的，网上有很多有关文章，大家不妨深入了解下
 
-尾语：还有一个问题，写示例程序的时候没有遇到，这里也说一下，可能是我原来程序用的东西太多了，暂时没有去找问题出在那里，对话框画背景的代码放到 OnPaint 函数中的话，工具栏下右方向有类似阴影的区域没有画上，相比OnEaserBkgnd是会被执行多次的，这就是用它不会出现那片残留区域的原因吧，更何况在OnEraseBkgnd中画，会有更小的闪烁，何乐而不为...（如果你想重现这个问题的话，就只画工具栏的背景，就会发现工具栏左下，右上有缺角，就知道我所言非虚，如果没有猜错，就是我原来程序有其他控件，一开始对话框绘制背景后，要会我的那个控件的时候，还是要调用 OnEraseBkgnd 然后有争议的那片地方就让这次调用给擦掉了）
+尾语：还有一个问题，写示例程序的时候没有遇到，这里也说一下，可能是我原来程序用的东西太多了，暂时没有去找问题出在那里，对话框画背景的代码放到 OnPaint 函数中的话，工具栏下右方向有类似阴影的区域没有画上，相比OnEaserBkgnd是会被执行多次的，这就是用它不会出现那片残留区域的原因吧，更何况在OnEraseBkgnd中画，会有更小的闪烁，何乐而不为...（如果你想重现这个问题的话，就只画工具栏的背景，就会发现工具栏左下，右上有缺角，就知道我所言非虚，如果没有猜错，就是我原来程序有其他控件，一开始对话框绘制背景后，要绘我的那个控件的时候，还是要调用 OnEraseBkgnd 然后有争议的那片地方就让这次调用给擦掉了）
 
-二次编辑：第二个尾语说的有问题，关于那片类似阴影的区域没有画上背景，想了解更多请看我下一篇博文：http://blog.csdn.net/panshiqu/article/details/10536469
+二次编辑：第二个尾语说的有问题，关于那片类似阴影的区域没有画上背景，想了解更多请看我下一篇博文：[传送门](./012.html)
