--- a/blog/012.md
+++ b/blog/012.md
@@ -13,7 +13,7 @@ _2013-08-29 17:27:35_
 
 ![](./img/012_1.jpeg)
 
-    看红色框包围的地方，是背后 VS2010 的界面，因为程序擦成透明的啦，上一篇文章我错误的想成那块没有绘上上的区域是属于对话框的，也就有了我上一篇文章在 OnEaserBkgnd 和 OnPaint 画背景之分（对于我的程序）不多说这些，看我工具栏类中是怎样贴背景的
+    看红色框包围的地方，是背后 VS2010 的界面，因为程序擦成透明的啦，上一篇文章我错误的想成那块没有绘上的区域是属于对话框的，也就有了我上一篇文章在 OnEaserBkgnd 和 OnPaint 画背景之分（对于我的程序）不多说这些，看我工具栏类中是怎样贴背景的
 
 ```
 BOOL CToolBarEx::OnEraseBkgnd(CDC* pDC)
