--- a/blog/015.md
+++ b/blog/015.md
@@ -40,7 +40,7 @@ void buffer::write_int(int value)
 
 举个例子，可能会更好理解，请拿出桌面的计算器
 
-十进制：4160486910 十六进制：F7FBFDFE 存储在小端的计算机中将是FEFDFBF7，数据的低字节是FE，保存的内存的低地址，由左至右就是由低到高，所以若是查看内存的话你首先看到的将是FE，当然大端正好是相反的。
+十进制：4160486910 十六进制：F7FBFDFE 存储在小端的计算机中将是FEFDFBF7，数据的低字节是FE，保存在内存的低地址，由左至右就是由低到高，所以若是查看内存的话你首先看到的将是FE，当然大端正好是相反的。
 
 接下来开始聊我今天碰到的问题，问题主要出在read_int中，就拿第一行代码举例说明，若_buffer[_start_offset++] = 0xF7，第一句执行的结果是 0xFFFFFFF7，若是仅看这一句当然也没有什么大问题，左移之后变成0xFFFFF700，假设此时_buffer[_start_offset++] = 0xFB，或运算之后就变成了0xFFFFFFFB，即便我用的是抑或运算，运算结果也是0x8FB，其实这样运算也并不是我想出来的，怎么就不对了呢，更何况我以前还用过，然后就是无穷无尽的测试。
 
