--- a/blog/018.md
+++ b/blog/018.md
@@ -51,13 +51,13 @@ startActivity(it);
 }
 ```
 
-若是你按着示例来写自己的，得到的结果肯定是程序崩溃，你难道不想想那四个参数分别是什么都一切照搬吗？（我就是这样的），第四个参数虽然最复杂，但是人家讲得也很明白的，类的路径最难发现其中的猫腻，若是你用推荐方法创建的项目的话，那里应该填AppActivity.java的路径，即是org/cocos2dx/cpp/AppActivity。这是第一个需要说明的地方，
+若是你按着示例来写自己的，得到的结果肯定是程序崩溃，你难道不想想那四个参数分别是什么都一切照搬吗？（我就是这样的），第四个参数虽然最复杂，但是人家讲得也很明白的，类的路径最难发现其中的猫腻，若是你用推荐方法创建项目的话，那里应该填AppActivity.java的路径，即是org/cocos2dx/cpp/AppActivity。这是第一个需要说明的地方，
 
 第二个说明的地方即是(Ljava/lang/String;)V括号里面的分号，这个我真的说不了什么，这是我试出来的，我这里没有错。
 
 第三个说明的地方是Android手机应用接口大全大家可以看这篇文章：http://jasonshieh.iteye.com/blog/781652，当我在找各种各样错误问题的时候，我曾质疑过这些接口方法对不对啊，但是与其这样不如好好找找自己的逻辑那里出了问题，毕竟就那么三行代码，你说人家怎么错。关于ACTION_DIAL和ACTION_CALL的区别是，CALL直接就弹出提示框是否要拨打电话，而DIAL则是打开手机上的拨号盘，并已经输入好了你要拨打的电话，其实你大可以自己试试的。
 
-第四个说明的地方就是占用我将近一天多的时间，说多了都是泪，首先JniHelper获取静态方法，及后面的调用静态方法，从文章中的第一个示例中大家再加上我给我说明，编译并执行应该并不成问题，虽然C++层如何增加断点真机调试我还不会，但是AppActivity.java里面增加断点，是可以调试的，这样你就可以测试自己的逻辑是否生效，当然不想这样的话，你也可以import android.util.Log;然后通过Log.e("cocos2d-x debug info", "hello world");当然之所以写成cocos2d-x debug info是因为这第一个参数在logCat中显示为 tag，这样我就可以把这个日志和cocos2dx的日志一同过滤出来只看它们了。
+第四个说明的地方就是占用我将近一天多的时间，说多了都是泪，首先JniHelper获取静态方法，及后面的调用静态方法，从文章中的第一个示例中大家再加上我给的说明，编译并执行应该并不成问题，虽然C++层如何增加断点真机调试我还不会，但是AppActivity.java里面增加断点，是可以调试的，这样你就可以测试自己的逻辑是否生效，当然不想这样的话，你也可以import android.util.Log;然后通过Log.e("cocos2d-x debug info", "hello world");当然之所以写成cocos2d-x debug info是因为这第一个参数在logCat中显示为 tag，这样我就可以把这个日志和cocos2dx的日志一同过滤出来只看它们了。
 
 第五个要说明的地方是承接上个说明，若是想访问非静态方法呢，你可以看我上面提到那篇文章的下一篇的最后一个示例，其实我一开始急功近利，我没有看到，导致我瞎试，浪费时间。请擦亮你们的钛合金双眼结合上一篇好好注意一下调用非静态方法第一个参数是什么？CallVoidMethod(jobj,methodID);是一个jobject的对像啊，千万别想当然的认为像调用静态方法那样，不然各种没有反应，你都不知道你的函数为什么调用不到，然后你就各种猜测吧。它最后一个示例的java代码有问题。我仅是大学里面学过java，所以我暂且认为它有问题，它的整体思想我们应该都能理解的，想把Activity的对像返回到C++层，当参数传递进行调用，但是它的方法有问题，actInstance = null，程序应该还是没有反应不去调用任何函数的，而且他加的那行注释我也不想说什么了，//定义单例，我还在想是不是他想定义单例然后没有写成呢，我就傻乎乎的百度了一下java如何实现单例模式，给套进去了，然后让我又一次陷入了一个不懂的难题，下面这段代码是错误的啊。
 
