--- a/blog/044.md
+++ b/blog/044.md
@@ -35,7 +35,7 @@ Luarocks (http://luarocks.org/) is the preferred mechanism to build and install 
 
 之后就可以通过Luarocks提供的命令安装lsqlite3啦，关于那个命名坑，我这里要说一下，你如果通过这个命令安装：luarocks install luasql-sqlite3 你就大错特错了，你应该通过这个命令安装，luarocks install lsqlite3这才是你真正需要的东西。关于名称坑在那里你们体会一下吧。
 
-安装过程在Windows上需要指定Sqlite_dir Sqlite_incdir，根据名称的意思指定正确的目录就好了，这样需求也需要你自己通过Sqlite3官网下载的东西编译一份静态库。方法就不详细说了。若是这一步在Mac上是不需要制定库目录的，实践告诉我的，呵呵。这里还要提一下，你会看到cocos有编好的sqlite3库文件，及头文件，在xxx\frameworks\cocos2d-x\external\sqlite3，最好不要用那个，因为你lsqlite3下载的是最新版本的，你的sqlite3却不用最新版本，编译过程会报一个错的，这个错很难让你想到是因为版本不匹配而造成的。
+安装过程在Windows上需要指定Sqlite_dir Sqlite_incdir，根据名称的意思指定正确的目录就好了，这样需求也需要你自己通过Sqlite3官网下载的东西编译一份静态库。方法就不详细说了。若是这一步在Mac上是不需要指定库目录的，实践告诉我的，呵呵。这里还要提一下，你会看到cocos有编好的sqlite3库文件，及头文件，在xxx\frameworks\cocos2d-x\external\sqlite3，最好不要用那个，因为你lsqlite3下载的是最新版本的，你的sqlite3却不用最新版本，编译过程会报一个错的，这个错很难让你想到是因为版本不匹配而造成的。
 
 即便你通过了上面的所有磨砺，你依然会在最后一步，止步不前。因为你要打包了，你有dll文件，你也有so文件，但那都是通过操作系统使用的，手机能用不能呢，实践告诉我，即使我把so文件当做资源打包到android上，路径不错的情况下，我还是无法使用它，过多的尝试和朋友的话，就让我前面的努力都夭折了，你的动态库是用gcc编译的，即便你手机程序能加载，也用不了，必须用NDK编译，不管怎样的方法，这一步是少不了的。
 
