--- a/blog/016.md
+++ b/blog/016.md
@@ -264,6 +264,6 @@ void BoardLayer::onTouchEnded(cocos2d::Touch *touch, cocos2d::Event *unused_even
 
 可能这里也就从一定层面上说明DrawNode早晚会取代DrawPrimitives的原因，DrawPrimitives迟早会被淘汰。
 
-但是这里也有一个疑问是，当使用DrawNode的为什么GL Verts累加的时候每次累加18呢，按我上面给出的参数我怎么想都想不到18啊？
+但是这里也有一个疑问是，当使用DrawNode时为什么GL Verts累加的时候每次累加18呢，按我上面给出的参数我怎么想都想不到18啊？
 
-这里也再多说明一个问题，当使用DrawPrimitives的时候，我是在draw实现绘画功能的，但是draw函数我后来发现是被循环调用的，应该是和刷新频率有关，就像MFC程序一样界面每隔一段时间刷新一次，当然这个时间很短，也也就导致了我看到的GL Verts 和 GL Calls 的值永远在我的计算当中，因为每次刷新这两个值都应该会重新计算的吧。若是按照刷新次数去计算这两个值，只会更大吧。
+这里也再多说明一个问题，当使用DrawPrimitives的时候，我是用draw实现绘画功能的，但是draw函数我后来发现是被循环调用的，应该是和刷新频率有关，就像MFC程序一样界面每隔一段时间刷新一次，当然这个时间很短，也就导致了我看到的GL Verts 和 GL Calls 的值永远在我的计算当中，因为每次刷新这两个值都应该会重新计算的吧。若是按照刷新次数去计算这两个值，只会更大吧。
