--- a/blog/045.md
+++ b/blog/045.md
@@ -158,7 +158,7 @@ select -1 -- errno 4
        The sleep(3) function is also never restarted if interrupted by a handler, but gives a success return: the number of seconds remaining to sleep.
 ```
 
-这里大致说明一下就是：当一个信号被捕获处理的时正阻塞着系统调用或是库函数，将会有两种情况发生，一种是调用将会自动重启当信号处理函数返回的时候，另一种是调用失败返回errno置EINTR。因为signal默认增加SA_RESTART标志，所以上面的是中断因为有标志自动重启的，下面的是无论如何都会返回错误的。
+这里大致说明一下就是：当一个信号被捕获处理时正阻塞着系统调用或是库函数，将会有两种情况发生，一种是调用将会自动重启当信号处理函数返回的时候，另一种是调用失败返回errno置EINTR。因为signal默认增加SA_RESTART标志，所以上面的是中断因为有标志自动重启的，下面的是无论如何都会返回错误的。
 
 经过测试，若自己通过sigaction函数提供Signal函数调用，并在函数中取消SA_RESTART标志，这样的话，第一个测试程序将会有如下输出：
 
