--- a/blog/078.md
+++ b/blog/078.md
@@ -26,7 +26,7 @@ if [[ ${*:$#:1} =~ @ ]]; then
     remote=${*:$#:1}
 fi
 
-eval $(grep ${remote%:*} $secret | awk '{printf("password=\"%s\";port=%s",$2,$3)}')
+eval $(grep ${remote%%:*} $secret | awk '{printf("password=\"%s\";port=%s",$2,$3)}')
 
 expect -c "set timeout -1;
 spawn scp -r -P $port ${*:1:$#-1} ${*:$#:1};
