--- a/blog/059.md
+++ b/blog/059.md
@@ -40,7 +40,7 @@ Mac
 ```
 
 提醒
-你可在分析打印后大致推测出那两个文件夹可能相同，这里推荐你使用 `Beyond Compare` 比对两个庞大的文件夹是否相同，记得取消对勾 `Session => Session Settings => Comparison => Compare timestamps` 用于不比对时间戳
+你可在分析打印后大致推测出那两个文件夹可能相同，这里推荐你使用 `Beyond Compare` 比对两个庞大的文件夹是否相同，记得 `会话 => 会话设置 => 比较` 取消比较时间戳，勾选比较内容
 
 源码
 ```
