--- a/blog/070.md
+++ b/blog/070.md
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-# 依据官方文档源码编译Nginx实现普通TCP服务反向代理负载均衡支持SSL/TLS的配置
+# 依据官方文档源码编译Nginx实现普通TCP服务反向代理负载均衡的配置
 _2018-08-23 11:45:28_
 
 * * *
@@ -125,28 +125,6 @@ mv objs/nginx /usr/local/nginx/sbin/nginx
 ```
 
 啰哩啰唆了这么多，大家可能发现我并不是想说某一种特定需求该如何配置，而是在分享我是如何借助官方文档写出配置的历程
-
-再设想一种场景，目前有支持WebSocket的服务，需要扩展其支持SSL/TLS协议，我们就可以摸索出如下配置
-```
-./configure --with-stream --with-stream_ssl_module
-```
-```
-stream {
-    server {
-        listen              7667 ssl;
-        proxy_pass          172.16.10.177:7667;
-        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers         AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
-        ssl_certificate     /usr/local/nginx/conf/cert.pem;
-        ssl_certificate_key /usr/local/nginx/conf/cert.key;
-        ssl_session_cache   shared:SSL:10m;
-        ssl_session_timeout 10m;
-    }
-}
-```
-
-从官方文档中可以看出，Nginx甚至可以代理WebSocket，如此以来，自己可以只实现普通的TCP监听，其它的各种类型ws/wss都可以由Nginx代理
-譬如有一套游戏服务，客户端现在新增H5版本用WebSocket实现，之后客户端再出微信小游戏版本，微信要求支持SSL/TLS，这些都可以通过Nginx实现
 
 最后说一下我对反向代理和正向代理的理解
 正向代理：客户知晓他正在使用代理，譬如翻墙
