--- a/blog/072.md
+++ b/blog/072.md
@@ -7,6 +7,8 @@ _2018-10-11 10:20:45_
 
 * * *
 
+已有比本文更完善的解决方案，请看 [Mac scp 使用 expect 避免输入密码 scpue](./078.html)
+
 一直通过 scp 同步多台服务器上配置文件，虽然已经写了 shell 脚本，但是密码还需要手动输入，终于忍不了啦，经查可以使用 expect 改变这种现状（当然不只这一种解决方案）
 
 ```
