--- a/blog/070.md
+++ b/blog/070.md
@@ -50,6 +50,7 @@ service nginx restart
 ```
 现在你已经可以通过部署Nginx的服务器IP访问到177服务器上的真正服务啦
 
+#### 负载均衡
 现实服务很可能不只一组，想要借此实现负载均衡，就要好好理解proxy_pass这段说明啦
 ```
 If a domain name resolves to several addresses, all of them will be used in a round-robin fashion. In addition, an address can be specified as a server group.
