--- a/blog/085.md
+++ b/blog/085.md
@@ -45,7 +45,7 @@ _2022-09-01 10:00:00_
 
 ### 不间断使用 SQL([mysqlgame](https://github.com/panshiqu/mysqlgame)), Bash([scpue](078.html), [hotupdate](046.html))
 
-### 其实也算会 PHP, Lua, Java, Python
+### 其实也算会 PHP, Lua, Java, Python, 汇编
 
 ## 技术周边
 
@@ -128,6 +128,8 @@ _2022-09-01 10:00:00_
 
 ## 总结
 **酷爱编程，从业十年，不忘初心**
+
+感谢您花时间阅读我的简历，期待能有机会与您共事
 
 ## Go第三方库
 * **15** github.com/go-sql-driver/mysql
