--- a/blog/085.md
+++ b/blog/085.md
@@ -50,8 +50,7 @@ _2022-09-01 10:00:00_
 ## 技术周边
 
 ### Linux
-* 发行版以CentOS为主，Ubuntu为辅
-* 有总结过运维相关[博客](083.html)
+* 总结过常用发行版相关的博客：[Ubuntu](086.html)、[CentOS](083.html)
 
 ### Nginx
 * 反向代理写有[博客](082.html)，在用HTTP(S)&WS(S)[配置](https://github.com/panshiqu/analyst/blob/master/conf.d/cmd.conf)
@@ -60,6 +59,9 @@ _2022-09-01 10:00:00_
 ### Docker
 * 常用于快速部署项目环境依赖，写有[博客](079.html)，自用部署[备忘](081.html#考虑各种方便请选用-docker-安装-mysql-和-redis)
 * 曾入门开始，学习产物在[这里](https://github.com/panshiqu/docker)
+
+### Jenkins
+* 安装、配置、使用流水线[博客](087.html)
 
 ### MySQL
 * 主读写，从只读，同步，备份，恢复，请看[这里](081.html#mysql-主配置)
@@ -75,7 +77,7 @@ _2022-09-01 10:00:00_
 * 相较于MySQL总是需要合理添加索引
 
 ### NSQ
-* 曾入门开始写有[博客](057.html)
+* 曾入门开始写有[博客](057.html)，docker-compose部署[配置](086.html#docker-compose-部署-nsq)
 * 被用于多服务日志集中落地等场景
 
 ### Protobuf
@@ -83,7 +85,7 @@ _2022-09-01 10:00:00_
 ### gRPC
 
 ### Certbot
-* 近两年生产环境总是使用它获取免费证书
+* 前两年生产环境总是使用它获取免费证书
 
 ### Telegram
 * 三年多无墙开发已习惯用它实现状态、告警等消息推送和实时互动，写有入门[博客](076.html)
@@ -99,8 +101,12 @@ _2022-09-01 10:00:00_
 ### Amazon
 * EC2、Route 53
 
+### Proxmox
+
 ### Ethereum
 * 整理有入门[博客](084.html)
+
+### ChatGPT
 
 ### 微信公众号
 * [goddz](https://github.com/panshiqu/goddz)、[shopping](https://github.com/panshiqu/shopping)
