--- a/blog/086.md
+++ b/blog/086.md
@@ -80,3 +80,45 @@ sudo docker compose restart
 sudo docker compose logs
 sudo docker compose ps
 ```
+
+### MySQL 库表占用空间
+```sql
+SELECT TABLE_SCHEMA, SUM(DATA_LENGTH+INDEX_LENGTH) FROM information_schema.TABLES GROUP BY TABLE_SCHEMA
+SELECT TABLE_NAME, DATA_LENGTH/1024/1024, INDEX_LENGTH/1024/1024 FROM information_schema.TABLES WHERE TABLE_SCHEMA = 'game'
+```
+
+### Git 相关
+```bash
+git blame -L16,16 utils/stack.go
+git config --global core.autocrlf true
+```
+
+### Proxmox 制作U盘启动
+* UltraISO 写入方式选择 `RAW`
+* Rufus 注意选择 `DD镜像`
+
+### 虚拟机硬盘扩容
+* Proxmox `Hardware -> Hard Disk -> Resize disk`
+* VirtualBox `管理 -> 虚拟介质管理 -> 虚拟硬盘 -> 修改大小`，若生成过快照，则需要打开列表，选择`明细`中显示`分配到：虚拟机名称`且后面不带`(快照名)`的`{x...-...x}.vdi`
+
+```bash
+sudo lsblk
+sudo growpart /dev/sda 3
+sudo lvresize --extents +100%FREE --resizefs /dev/mapper/ubuntu--vg-ubuntu--lv
+```
+
+### 检测证书到期时间
+```bash
+echo | openssl s_client -connect www.zhipin.com:443 2>/dev/null | openssl x509 -noout -dates
+```
+
+```bash
+#!/bin/bash
+while IFS= read -r line
+do
+  echo | openssl s_client -connect $line 2>/dev/null | openssl x509 -noout -checkend 2592000 1>/dev/null
+  if [ $? != 0 ]; then
+    echo $line will expire
+  fi
+done < certs.txt
+```
